# conf2nix

./: .gitignore  README.md  flake.nix
.github/workflows/: update.yml
conf2nix/: LICENSE  Makefile.conf2nix  conf2nix.c  default.nix
conf2nix-wrapper/: default.nix
nconf2nix/: Cargo.toml
nconf2nix/src/: main.rs  options.rs
